--- a/_output.yml
+++ b/_output.yml
@@ -3,6 +3,7 @@ bookdown::bs4_book:
   theme:
     primary: "#096B72"
   repo: https://github.com/rstudio/bookdown-demo
+output_dir: "docs"
 bookdown::pdf_book:
   includes:
     in_header: preamble.tex
